<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Title -->
            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:background="#E91E63"
                android:padding="10dp"
                android:text="@string/past_orders_activity_label"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="16dp"/>

            <!-- Back Button -->
            <Button
                android:id="@+id/backButton"
                android:layout_width="103dp"
                android:layout_height="35dp"
                android:backgroundTint="#E91E63"
                android:text="@string/past_orders_back"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Order Number Section -->
            <TextView
                android:id="@+id/tvOrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_orders_order_num"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleLabel" />

            <!-- Horizontal Scrolling ListView -->
            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvOrderNumber">

                <ListView
                    android:id="@+id/orderList"
                    android:layout_width="wrap_content"
                    android:layout_height="362dp"
                    android:orientation="horizontal"/>
            </HorizontalScrollView>

            <!-- Totals Section -->

            <TextView
                android:id="@+id/orderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="24dp"
                android:text="@string/past_orders_order_totalTax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />

            <!-- Buttons Section -->

            <TextView
                android:id="@+id/orderAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="212dp"
                android:text="@string/past_orders_subtotal_amt"
                app:layout_constraintBaseline_toBaselineOf="@id/orderText"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnCancelOrder"
                android:layout_width="131dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#E91E63"
                android:text="@string/past_orders_cancel_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnPlaceOrder"
                app:layout_constraintTop_toBottomOf="@id/orderAmount"
                app:layout_constraintVertical_bias="0.23" />

            <Button
                android:id="@+id/btnPlaceOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/past_orders_place_order"
                android:backgroundTint="#E91E63"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toEndOf="@id/btnCancelOrder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderAmount"
                android:layout_marginTop="16dp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvOrderNumber"
                app:layout_constraintTop_toTopOf="@id/tvOrderNumber" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
